--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <h1>Cours Cahier des charges</h1>
-    <p>Ceci est ma première page déployée.</p>
+    <p>Lien vers le cours 1 - <a href="https://github.com/Le-Minh-Phuc/Cahier-Des-Charges/blob/main/Module%20Cahier%20des%20Charges%20-%20Cours%201%20-%20Introduction%20au%20Cahier%20des%20Charges.pptx">Introduction au cahier des charges</a>></p>
 </body>
 </html>
