--- a/index.html
+++ b/index.html
@@ -4,91 +4,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bienvenue</title>
-  <style>
-    body {
-      font-family: 'Arial', sans-serif;
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(to right, #4facfe, #00f2fe);
-      color: #333;
-    }
-    header {
-      background-color: rgba(255, 255, 255, 0.9);
-      padding: 20px;
-      text-align: center;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    }
-    header h1 {
-      margin: 0;
-      font-size: 2.5em;
-      color: #4facfe;
-    }
-    header p {
-      font-size: 1.2em;
-      color: #555;
-    }
-    .container {
-      max-width: 1200px;
-      margin: 50px auto;
-      padding: 20px;
-      text-align: center;
-    }
-    .container h2 {
-      font-size: 2em;
-      color: #fff;
-      margin-bottom: 20px;
-    }
-    .container p {
-      font-size: 1.2em;
-      line-height: 1.6;
-      color: #f5f5f5;
-    }
-    .btn {
-      display: inline-block;
-      margin-top: 20px;
-      padding: 10px 20px;
-      background-color: #fff;
-      color: #4facfe;
-      text-decoration: none;
-      border-radius: 5px;
-      font-size: 1em;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      transition: all 0.3s ease-in-out;
-    }
-    .btn:hover {
-      background-color: #4facfe;
-      color: #fff;
-    }
-    footer {
-      text-align: center;
-      padding: 20px;
-      background: rgba(255, 255, 255, 0.9);
-      box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
-      margin-top: 50px;
-    }
-    footer p {
-      margin: 0;
-      font-size: 1em;
-      color: #777;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class="image-container">
+    <img src="logoInisup.png" alt="Image à gauche" class="image-gauche">
+    <img src="formationFornier.png" alt="Image à droite" class="image-droite">
+</div>
   <header>
-    <h1>Bienvenue sur notre site</h1>
-    <p>Un endroit pour apprendre, explorer et créer</p>
+    <h1>Module Cahier des Charges</h1>
+    <p>Supports de cours</p>
   </header>
   <div class="container">
-    <h2>Notre Mission</h2>
+    <h2>Cahier des charges</h2>
     <p>
-      Nous sommes ici pour vous inspirer à découvrir votre potentiel et à 
-      atteindre vos objectifs. Rejoignez-nous dans un voyage de croissance 
-      personnelle et professionnelle. Ensemble, nous pouvons réaliser de grandes choses.
+      Slides de cours - Cahier des Charges
     </p>
-    <a href="#contact" class="btn">Contactez-nous</a>
+    <a href="https://github.com/Le-Minh-Phuc/Cahier-Des-Charges/raw/refs/heads/main/Module%20Cahier%20des%20Charges%20-%20Cours%201%20-%20Introduction%20au%20Cahier%20des%20Charges.pptx"download class="download-button">Cours 1</a>
+    <a href="https://github.com/Le-Minh-Phuc/Cahier-Des-Charges/raw/refs/heads/main/Module%20Cahier%20des%20Charges%20-%20Cours%202%20-%20TP%20Utilisation%20des%20outils%20-%20Diagramme%20Bete%20%C3%A0%20Cornes%20et%20Fiche%20de%20Cadrage.pptx"download class="download-button">Cours 2</a>
+    <a href="https://github.com/Le-Minh-Phuc/Cahier-Des-Charges/raw/refs/heads/main/Module%20Cahier%20des%20Charges%20-%20Cours%203%20et%204%20-%20L'analyse%20fonctionnelle.pptx"download class="download-button">Cours 3 & 4</a>
   </div>
   <footer>
-    <p>© 2024 Votre Site Web. Tous droits réservés.</p>
+    <p>© 2024 Formation FORNIER. Tous droits réservés.</p>
   </footer>
 </body>
 </html>
